blockml/test/valid/06_calc_refs_calc/v15/v15d.dashboard
dashboard: v15d
title: 'sales'
reports:
- title: 'weekly'
  model: v15m
  select:
  - mf.calc2
  type: 'table'
