blockml/test/errors/11_report/e99/e99d.dashboard
dashboard: e99d
title: 'sales'
fields:
- filter: category
  result: number

reports:
- title: 'overview'
  model: e99m
  listen_filters:
    category: a.dim1    
  select:
  - a.dim1

